Fix editor input field and content-editable on iOS

--- a/src/sass/components/_labels.scss
+++ b/src/sass/components/_labels.scss
@@ -7,7 +7,6 @@
     vertical-align: middle;
     border-radius: ($line-height-base * $label-font-size) + 2 * $label-padding-vertical;
     white-space: nowrap;
-    user-select: none;
     background-color: $label-back-color;
     color: $label-color;
     transition: background-color 0.3s;
